--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,13 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.4",
     "styled-components": "^6.1.15",
     "three": "^0.173.0"
   },
   "scripts": {
-  "start": "serve -s build -l 3000",
-  "build": "NODE_OPTIONS='--max-old-space-size=4096' react-scripts build",
+    "start": "serve -s build -l 3000",
+    "build": "NODE_OPTIONS='--max-old-space-size=4096' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
