--- a/backend1/pom.xml
+++ b/backend1/pom.xml
@@ -86,6 +86,11 @@
         <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-mongodb</artifactId>
+    </dependency>
+
     <!-- ✅ Spring Boot WebFlux (Required for `Mono`) -->
     <dependency>
         <groupId>org.springframework.boot</groupId>
