--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,8 @@
     "three": "^0.173.0"
   },
   "scripts": {
-    "start": "serve -s build -l 3000",
-    "build": "NODE_OPTIONS='--max-old-space-size=4096' react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
