--- a/backend1/src/main/resources/application.yml
+++ b/backend1/src/main/resources/application.yml
@@ -17,6 +17,7 @@ spring:
     mongodb:
       uri: mongodb+srv://doadmin:2658kXKF7GtD309M@db-mongodb-fra1-68366-638f76d0.mongo.ondigitalocean.com/kronen?tls=true&authSource=admin
     
+
   mail:
     host: mail.privateemail.com
     port: 587
@@ -30,3 +31,7 @@ spring:
           starttls:
             enable: true
     default-encoding: UTF-8
+
+stripe:
+  api:
+    key: {stripeApiKey}
